# ghost

./: .baw  CHANGELOG  CHANGELOG.md  Jenkinsfile  Makefile  README  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg
.github/workflows/: release.yml
docs/: index.rst
docs/releases/: backlog.rst
ghost/: __init__.py  cli.py  extract.py  optimize.py  parts.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_extract.py  test_optimize.py  test_part.py  test_pdfwrite.py
ughost/: __init__.py  cli.py  extract.py  optimize.py  parts.py  utils.py
